k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: roberta-sentiment
  labels:
    name: roberta-sentiment
    app: sentiment-analysis
