k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roberta-sentiment-service
  namespace: roberta-sentiment
  labels:
    app: roberta-sentiment-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: roberta-sentiment-service
---
apiVersion: v1
kind: Service
metadata:
  name: roberta-sentiment-service-nodeport
  namespace: roberta-sentiment
  labels:
    app: roberta-sentiment-service
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: roberta-sentiment-service
